# prajana

./: .gitignore  Cargo.toml  PLAN.md  README.md  arithmetic_to_ocaml.ml  force_to_displacement.ml  force_to_ocaml.ml  interference_to_scalar.ml  matrix_to_matrix.ml  matrix_to_ocaml.ml  vector_to_ocaml.ml  vector_to_scalar.ml  vrnda_ganita_to_out.ml
agent_x/agents/: README.md
agents/planner/: boundaries.md  skills.md
agents/reader/: boundaries.md  skills.md
agents/reviewer/: boundaries.md
agents/scribe/: boundaries.md
brahman/: agent.md  avrti-yojana.md  collatz-proof.md  consciousness.md  dharma.md  epoch-11-plan.md  epochs.md  flow.md  force.md  genesis.md  kavitha.md  krishna-vivara.md  learning-architecture.md  learning-foundation.md  learning-instrument.md  learning-preamble.md  learning-sangati.md  learning-time-identity.md  learning-vidya.md  manipravalam.md  nyaya.md  parampara-english.md  parampara.md  prabandham-consciousness.md  prabandham-madhava.md  process-understanding.md  proof-of-existence.om  proof-of-learning.om  proof-of-numbering.om  rasayana.md  sangati-seed.txt  satya-bahuvacana.md  shabda-kosha.md  swarm-vision.md  visarjana-epoch8-avahana.md  vyakarana.md
brahman/kosha/: action.om  activation.om  aging.om  all-proof.om  approach-without-contact.om  armor.om  assertion.om  awareness.om  beyond-fullness.om  black-hole.om  boundary.om  cell.om  chemical-bond.om  code-mixing.om  collatz-parity.om  collatz.om  compression.om  concealment.om  conscious-unconscious.om  consciousness.om  conservation.om  consonants.om  contact.om  context-degradation.om  continuous.om  convergence.om  decay.om  decline.om  density.om  dimension.om  direct-perception.om  discrimination.om  domain-kosha.om  duality.om  emanation.om  entropy.om  equilibrium.om  eudaimonia.om  even-odd.om  evolution.om  (+106 more)
brahman/sangati-old/: aayaama.om  abhaya.om  abheda.om  abhisarana.om  ananta.om  antaraayaama.om  antarvidya.om  anusvara-pratibodha.om  anveshana.om  artha-dhvani.om  asprishta-drishthanta.om  avahana.om  bija-nyasa.om  brahman-sthalam.om  chhanana.om  collatz-math-seema.om  collatz-returningness.om  (+57 more)
bridge/: Cargo.toml
bridge/src/: main.rs  predict.rs  train.rs
docs/: agent-x-philosophy-and-progress.md  agent.md  consciousness.md  epistemology.md  genesis.md  grammar-formal-design.md  learning.md  next-implementation-plan.md  osvauld-integration.md  prajna.md  proof-of-numbering.om  purana.om  vakya.md
src/: main.rs
vyakarana/: dune-project
(+569 files in other folders)
