[package]
name = "agent_x"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI (fallback)
ratatui = "0.29"
crossterm = "0.28"

# Rich TUI rendering
syntect = { version = "5", default-features = false, features = ["default-themes", "default-syntaxes", "regex-onig"] }
tui-textarea = "0.7"

# CRDT
loro = "1"

# Storage
redb = "2"

# Code intelligence
tree-sitter = "0.24"
tree-sitter-rust = "0.23"

# LSP protocol types
lsp-types = "0.97"

# Markdown rendering
pulldown-cmark = "0.12"

# HTTP + SSE streaming for model APIs
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"
sha2 = "0.10"

# IDs + time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"
async-trait = "0.1.89"
arboard = "3"
json5 = "0.4"
